# rust-jwt-auth-server

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: auth.rs  error.rs  main.rs
